# drone-detection

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
airflow/dags/: continuous_training.py  data_ingestion.py  train_pipeline.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.mlflow  Dockerfile.training  Dockerfile.webapp  init-db.sh
docs/: k8s-architecture.txt
k8s/: api-deployment.yml  mlflow.yml  monitoring.yml  webapp-deployment.yml
k8s/gke/: api-deployment.yml  mlflow.yml  webapp-deployment.yml
k8s/helm/: airflow-values.yml  minio-values.yml  postgresql-values.yml
monitoring/grafana/provisioning/dashboards/: drone-detection.json
monitoring/prometheus/: prometheus.yml
src/data/: download.py  preprocess.py
src/serving/: api.py
src/training/: evaluate.py  train.py
src/webapp/: app.py
tests/integration/: test_api.py
tests/unit/: test_preprocess.py
